--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,7 +47,7 @@
                                 <li class="list-group-item">Préparateur physique</li>
                             </ul>
                             <div class="card-footer text-muted text-center">
-                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">En savoir plus</a>
                             </div>
                         </div>
                     </div>
