--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -15,13 +15,15 @@
 
     <div id="wrapper" >
 
-        <header id="header" class="container align-center">
-            <span class="logo" title="Never Back Down"></span>
-            <h1>Program</h1>
-            <p>Une programmation d’entrainement élaborée par une équipe de
-                    coach expérimentés et de sportifs de haut niveau à votre écoute
-                    afin de vous permettre de passer vos limites.</p>
-        </header>
+        <div id="header-wrapper">
+            <header id="header" class="container align-center">
+                <span class="logo" title="Never Back Down"></span>
+                <h1>Program</h1>
+                <p>Une programmation d’entrainement élaborée par une équipe de
+                        coach expérimentés et de sportifs de haut niveau à votre écoute
+                        afin de vous permettre de passer vos limites.</p>
+            </header>
+        </div>
         <nav id="nav">
             <ul>
                 <li><a href="#header" class="active">Home</a></li>
@@ -42,9 +44,13 @@
                                 <p class="card-text">Head Coach Crossfit Nancy</p>
                             </div>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">BPJEPS AGFF en mention force</li>
-                                <li class="list-group-item">Crossfit Trainer Level 1 & 2</li>
-                                <li class="list-group-item">Préparateur physique</li>
+                                <li class="list-group-item">CrossFit Level 2 Trainer (CF-L2)</li>
+                                <li class="list-group-item">Competitor Certificate (2017)</li>
+                                <li class="list-group-item">Judge 2016 Certificate (2016)</li>
+                                <li class="list-group-item">Judges Certificate (2017)</li>
+                                <li class="list-group-item">Scaling Certificate (2016)</li>
+                                <li class="list-group-item">Spot The Flaw Certificate (1)</li>
+                                <li class="list-group-item">bpjeps agff 2014</li>
                             </ul>
                             <div class="card-footer text-muted text-center">
                                 <a href="#" class="card-link">En savoir plus</a>
