--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -18,7 +18,6 @@
         <div id="header-wrapper">
             <header id="header" class="container align-center">
                 <span class="logo" title="Never Back Down"></span>
-                <h1>Program</h1>
                 <p>Une programmation d’entrainement élaborée par une équipe de
                         coach expérimentés et de sportifs de haut niveau à votre écoute
                         afin de vous permettre de passer vos limites.</p>
@@ -167,32 +166,35 @@
                 </div>
             </section>
 
-            <footer id="footer" class="container clearfix">
-                <section>
-                    <h2>Never Back Down</h2>
-                    <div class="row">
-                        <div class="col-12 col-sm-4">
-                            <span>Address</span>
-                            <p>26 Boulevard du 26ème RI, 54000 Nancy</p>
+            <div class="footer-wrapper clearfix">
+                
+                <footer id="footer" class="container">
+                    <section>
+                        <h2>Never Back Down</h2>
+                        <div class="row">
+                            <div class="col-12 col-sm-4">
+                                <span>Address</span>
+                                <p>26 Boulevard du 26ème RI, 54000 Nancy</p>
+                            </div>
+                            <div class="col-12 col-sm-4">
+                                <span>Phone</span>
+                                <p>+336 12 23 45 69</p>
+                            </div>
+                            <div class="col-12 col-sm-4">
+                                <span>Email</span>
+                                <p>contact@neverbackdown.fr</p>
+                            </div>
                         </div>
-                        <div class="col-12 col-sm-4">
-                            <span>Phone</span>
-                            <p>+336 12 23 45 69</p>
-                        </div>
-                        <div class="col-12 col-sm-4">
-                            <span>Email</span>
-                            <p>contact@neverbackdown.fr</p>
-                        </div>
-                    </div>
-                    <ul class="icons">
-                        <li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-                        <li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
-                        <li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
-                        <li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-                        <li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-                    </ul>
-                </section>
-            </footer>
+                        <ul class="icons">
+                            <li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
+                            <li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
+                            <li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
+                            <li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
+                            <li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+                        </ul>
+                    </section>
+                </footer>
+            </div>
         </div>
     </div>
 
