--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -35,7 +35,8 @@
             <section id="coachs" class="container">
                 <h1>Coachs</h1>
                 <div class="row">
-                    <div class="col-12 col-sm-6 col-lg-4 offset-lg-2">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-sm-6 col-lg-4">
                         <div class="card">
                             <img class="card-img-top" src="static/images/benoit.jpg" alt="Benoit Jacquemin">
                             <div class="card-block">
@@ -52,7 +53,7 @@
                                 <li class="list-group-item">bpjeps agff 2014</li>
                             </ul>
                             <div class="card-footer text-muted text-center">
-                                <a href="#" class="card-link">En savoir plus</a>
+                                <!--a href="#" class="card-link">En savoir plus</a-->
                             </div>
                         </div>
                     </div>
@@ -69,38 +70,60 @@
                                 <li class="list-group-item">12ème Jeux Olympiques</li>
                             </ul>
                             <div class="card-footer text-muted text-center">
-                                <a href="#" class="card-link">Card link</a>
+                                <!--a href="#" class="card-link">En savoir plus</a-->
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+
             <section id="programs" class="container">
                 <h1>Programs</h1>
                 <div class="row">
 
-                    <div class="col-12 col-sm-4">
-                        <div class="card">
-                        <div class="card-block">
+                    <div class="col-lg-1"></div>
+                    <div class="col-12 col-sm-4 col-lg-2">
+                        <div id="program-free" class="card">
+                            <div class="card-block">
                                 <h3 class="card-title">Free</h3>
                                 <p class="card-text">Programmation du jour</p>
                             </div>
                             <div class="card-footer text-muted text-center">
-                                <a href="#" class="card-link">Voir</a>
+                                <a href="#" class="card-link" data-toggle="modal" data-target="#modal-program-free">Voir</a>
                             </div>
                         </div>
+                        
+                        <div id="modal-program-free" class="modal fade" tabindex="-1" role="dialog">
+                            <div class="modal-dialog" role="document">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                  <h4 class="modal-title">Programmation du jour</h4>
+                                </div>
+                                <div class="modal-body">
+                                  <p>
+                                    FOR TIME<br/>
+                                    RUN 2km<br/>
+                                    50 pull ups<br/>
+                                    100 push ups<br/>
+                                    150 DU<br/>
+                                    RUN 2 km</p>
+                                </div>
+                              </div><!-- /.modal-content -->
+                            </div><!-- /.modal-dialog -->
+                          </div><!-- /.modal -->
                     </div>
-                    <div class="col-12 col-sm-4">
-                        <div class="card">
+                    <div class="col-12 col-sm-4 col-lg-2">
+                        <div id="self-performing" class="card">
                             <div class="card-block">
                                 <h3 class="card-title">Self Performing</h3>
                                 <p class="card-text">
-                                        1 Month
-                                        CYCLE
-                                        5 Jours
-                                        2 days
-                                        Weightlifting
-                                        Gym/Met-Con
+                                        1 Month<br/>
+                                        CYCLE<br/>
+                                        5 Jours<br/>
+                                        2 days<br/>
+                                        Weightlifting<br/>
+                                        Gym/Met-Con<br/>
                                         Accesory work
                                 </p>
                             </div>
@@ -108,31 +131,60 @@
                                 <a href="#" class="card-link">35€ / mois</a>
                             </div>
                         </div>
+
                     </div>
 
-                    <div class="col-12 col-sm-4">
+                    <div class="col-12 col-sm-4 col-lg-2">
                         <div class="card">
                             <div class="card-block">
                                 <h3 class="card-title">Competitor</h3>
                                 <p class="card-text">
-                                        3 Month
-                                        CYCLE
-                                        7 jours
-                                        PROGRAMING
-                                        3 /4 days
-                                        Weightlifting
-                                        Accesory work
-                                        Gym
-                                        Metabolic
-                                        conditionnement
-                                        RECOVERY
-                                        Functional
-                                        movement :Injury
+                                        3 Month<br/>
+                                        CYCLE<br/>
+                                        7 jours<br/>
+                                        PROGRAMING<br/>
+                                        3 /4 days<br/>
+                                        Weightlifting<br/>
+                                        Accesory work<br/>
+                                        Gym<br/>
+                                        Metabolic<br/>
+                                        conditionnement<br/>
+                                        RECOVERY<br/>
+                                        Functional<br/>
+                                        movement :Injury<br/>
                                         Prevention
                                 </p>
                             </div>
                             <div class="card-footer text-muted text-center">
-                                <a href="#" class="card-link">35€ / mois</a>
+                                <a href="#" class="card-link">50€ / mois</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-lg-2">
+                        <div class="card">
+                            <div class="card-block">
+                                <h3 class="card-title">PERSONAL TRAINING</h3>
+                                <p class="card-text">
+                                        Weightlifting<br/>
+                                </p>
+                            </div>
+                            <div class="card-footer text-muted text-center">
+                                <a href="#" class="card-link">Sur devis</a>
+                            </div>
+                        </div>
+                    </div>
+                        
+                    <div class="col-12 col-sm-6 col-lg-2">
+                        <div class="card">
+                            <div class="card-block">
+                                <h3 class="card-title">PERSONAL TRAINING</h3>
+                                <p class="card-text">
+                                        1 hour
+                                </p>
+                            </div>
+                            <div class="card-footer text-muted text-center">
+                                <a href="#" class="card-link">50€ / mois</a>
                             </div>
                         </div>
                     </div>
@@ -189,8 +241,6 @@
                             <li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
                             <li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
                             <li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
-                            <li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-                            <li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
                         </ul>
                     </section>
                 </footer>
@@ -198,7 +248,9 @@
         </div>
     </div>
 
-    <script src="static/js/jquery.min.js"></script>
+    <script src="static/js/jquery-3.2.1.slim.min.js"></script>
+    <script src="static/js/popper.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
     <script src="static/js/jquery.scrollex.min.js"></script>
     <script src="static/js/jquery.scrolly.min.js"></script>
     <script src="static/js/main.js"></script>
