--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -52,9 +52,9 @@
                                 <li class="list-group-item">Spot The Flaw Certificate (1)</li>
                                 <li class="list-group-item">bpjeps agff 2014</li>
                             </ul>
-                            <div class="card-footer text-muted text-center">
-                                <!--a href="#" class="card-link">En savoir plus</a-->
-                            </div>
+                            <!--div class="card-footer text-muted text-center">
+                                <a href="#" class="card-link">En savoir plus</a>
+                            </div-->
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4">
@@ -69,9 +69,9 @@
                                 <li class="list-group-item">Champion du Monde Masters</li>
                                 <li class="list-group-item">12ème Jeux Olympiques</li>
                             </ul>
-                            <div class="card-footer text-muted text-center">
-                                <!--a href="#" class="card-link">En savoir plus</a-->
-                            </div>
+                            <!--div class="card-footer text-muted text-center">
+                                <a href="#" class="card-link">En savoir plus</a>
+                            </div-->
                         </div>
                     </div>
                 </div>
@@ -94,23 +94,26 @@
                         </div>
                         
                         <div id="modal-program-free" class="modal fade" tabindex="-1" role="dialog">
-                            <div class="modal-dialog" role="document">
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                  <h4 class="modal-title">Programmation du jour</h4>
-                                </div>
-                                <div class="modal-body">
-                                  <p>
-                                    FOR TIME<br/>
-                                    RUN 2km<br/>
-                                    50 pull ups<br/>
-                                    100 push ups<br/>
-                                    150 DU<br/>
-                                    RUN 2 km</p>
-                                </div>
-                              </div><!-- /.modal-content -->
-                            </div><!-- /.modal-dialog -->
+                            <div class="vertical-alignment-helper">
+                                        
+                                <div class="modal-dialog vertical-align-center" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title">Programmation du jour</h4>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>
+                                            FOR TIME<br/>
+                                            RUN 2km<br/>
+                                            50 pull ups<br/>
+                                            100 push ups<br/>
+                                            150 DU<br/>
+                                            RUN 2 km</p>
+                                    </div>
+                                </div><!-- /.modal-content -->
+                                </div><!-- /.modal-dialog -->
+                            </div>
                           </div><!-- /.modal -->
                     </div>
                     <div class="col-12 col-sm-4 col-lg-2">
@@ -128,7 +131,7 @@
                                 </p>
                             </div>
                             <div class="card-footer text-muted text-center">
-                                <a href="#" class="card-link">35€ / mois</a>
+                                <a href="#contact" class="card-link">35€ / mois</a>
                             </div>
                         </div>
 
@@ -156,7 +159,7 @@
                                 </p>
                             </div>
                             <div class="card-footer text-muted text-center">
-                                <a href="#" class="card-link">50€ / mois</a>
+                                <a href="#contact" class="card-link">50€ / mois</a>
                             </div>
                         </div>
                     </div>
@@ -170,7 +173,7 @@
                                 </p>
                             </div>
                             <div class="card-footer text-muted text-center">
-                                <a href="#" class="card-link">Sur devis</a>
+                                <a href="#contact" class="card-link">Sur devis</a>
                             </div>
                         </div>
                     </div>
@@ -184,7 +187,7 @@
                                 </p>
                             </div>
                             <div class="card-footer text-muted text-center">
-                                <a href="#" class="card-link">50€ / mois</a>
+                                <a href="#contact" class="card-link">50€ / mois</a>
                             </div>
                         </div>
                     </div>
@@ -194,23 +197,24 @@
             <section id="contact" class="container clearfix">
                 <h1>Contact</h1>
                 <div class="row">
-                    <div class="col-12 col-sm-10 offset-sm-1">
+                    <div class="col-sm-1"></div>
+                    <div class="col-12 col-sm-10">
                         <div class="card">
                             <div class="card-block">
-                                <p>
+                                <p class="text-center">
                                     Laissez-nous votre email et votre message, nous vous répondrons rapidement.
                                 </p>
-                                <form>
+                                <form action="https://getsimpleform.com/messages?form_api_token=0614d6cda955d996be8799845f653a8c" method="post">
                                     <div class="form-group">
-                                        <label for="exampleInputEmail1">Email address</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                        <label for="exampleInputEmail1">Adresse mail</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Saississez votre adresse mail" name="email">
+                                        <small id="emailHelp" class="form-text text-muted">Nous ne partagerons jamais votre email à des tiers.</small>
                                     </div>
                                     <div class="form-group">
                                         <label for="exampleTextarea">Message</label>
-                                        <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+                                        <textarea class="form-control" id="exampleTextarea" rows="3" name="message"></textarea>
                                     </div>
-                                    <button type="submit" class="btn btn-primary float-right">Submit</button>
+                                    <input type='submit' class="btn btn-primary float-right"></input>
                                 </form>
                             </div>
                         </div>
@@ -248,11 +252,9 @@
         </div>
     </div>
 
-    <script src="static/js/jquery-3.2.1.slim.min.js"></script>
+    <script src="static/js/jquery-3.2.1.min.js"></script>
     <script src="static/js/popper.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/jquery.scrollex.min.js"></script>
-    <script src="static/js/jquery.scrolly.min.js"></script>
     <script src="static/js/main.js"></script>
 </body>
 
